Closed Bug 15095 Opened 26 years ago Closed 26 years ago

clickCount not computed correctly on Win32 (never > 2)

Categories

(Core :: XUL, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: elig, Assigned: rods)

References

()

Details

(Keywords: helpwanted, platform-parity, verifyme, Whiteboard: fix is in my tree)

* TITLE/SUMMARY [PP] Triple-clicking doesn't select anything on Win32, Linux * STEPS TO REPRODUCE 0) Launch Apprunner 1) View any web page. (I was using http://slip/projects/marvin/selection/triple- click-text/triple-click-text.html) 2) From within the browser, attempt to triple-click a line of text. * RESULT - What happened On Mac OS, the text is selected. On Win32 and Linux, no selection takes place. (Within the Win32 editor, an editing caret is placed, but no text selection takes place. On Mac OS, it works.) - What was expected Triple-click gestures should select a line of text. (roughly speaking; platform UI guidelines clarifies corner cases, as does the triple-click-text test case cited above.) * REGRESSION - Occurs On Win32 Apprunner (1999092808 optimized build [NT 4, Service Pack 5]) Linux Apprunner (1999092708 optimized build) - Doesn't Occur On Mac OS Apprunner (1999092808 optimized build) * CONFIGURATIONS TESTED - [Mac] Beige Power Mac G3 (266 MHz PowerPC 750), 96 MB RAM (VM on; 1 MB of VM used), 1024x768 (Thousands of Colors), Mac OS 8.6 - [Win32] Vectra VL (233 MHz P2), 96 MB RAM, 800x600 (True Color), NT 4.0 SP5. - [Linux] Vectra VL (266 MHz P2), 96 MB RAM. Red Hat Linux 6.0 (GNOME).
Component: Selection → XP Toolkit/Widgets
Summary: [PP] Triple-clicking doesn't select anything on Win32, Linux → [PP] Triple-clicking doesn't select anything on Win32
I believe that this has been addressed on Linux. Changing Summary to reflect that. Eli--please correct summary again if I am incorrect. This bug should be reassigned to someone (rods?) since it isn't a selection problem but a windows-specific problem.
It's working fine for me on Linux today (though Eli should probably also verify that).
[will confirm when M10 goes out the door; currently using M10 builds...]
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → WONTFIX
if someday the back end gets a tripple click on windows. this will be fixed. I am not going to go fix it since this isnt a regression. most win32 apps dont do tripple click. Again the code is XP and if we get a message of a tripple click from the event code, this will work. if you want, reassign it to someone doing windows event code..
Status: RESOLVED → REOPENED
Status: REOPENED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: WONTFIX → LATER
Changing to RESOLVED/LATER, per mjudge's comments.
Status: RESOLVED → VERIFIED
Verified fixed in Linux on this morning's build. Verifying as LATER per mjudge's comments.
Status: VERIFIED → REOPENED
Summary: [PP] Triple-clicking doesn't select anything on Win32 → [PP] clickCount not computed correctly on Win32 (never > 2)
Assignee: mjudge → trudelle
Status: REOPENED → NEW
reopen bug; this bug is for clickCount getting updated properly on Windows. Probably the code should have been written xp but that should probably be optimized/unified in another release. Changing summary to match mjudge's findings. I can imagine that other apps / utilities will want an accurate clickCount so I think we should fix this bug.
Resolution: LATER → ---
btw, this can probably wait until after beta 1
Assignee: trudelle → rods
reassigning to rods, per hyatt.
See nsMacEventHandler.cpp for how this can be handled. Not too dificult to replicate in Windows.
changed to M14
moving to M15
Keywords: pp
Summary: [PP] clickCount not computed correctly on Win32 (never > 2) → clickCount not computed correctly on Win32 (never > 2)
mass-move to M16
Target Milestone: M15 → M16
*** Bug 37373 has been marked as a duplicate of this bug. ***
I have no idea how to get three clicks out of windows. Help!
Status: NEW → ASSIGNED
Summary: clickCount not computed correctly on Win32 (never > 2) → [HELP WANTED]clickCount not computed correctly on Win32 (never > 2)
Rod, scroll up a little to see Michael Lowe's pointer to the file where Mac implemented it.
rods--The MacOS doesn't give programmers double-click or triple-click messages; just mousedown and mouseup. You may want to look at the Macintosh event code. It has a counter and keeps track of how many consecutive clicks it gets so it can send the dom the proper number of clicks. It really should be pretty easy.
Keywords: helpwanted
fix is in my tree
Summary: [HELP WANTED]clickCount not computed correctly on Win32 (never > 2) → [FIX]clickCount not computed correctly on Win32 (never > 2)
Whiteboard: fix is in my tree
fixed
Status: ASSIGNED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
Summary: [FIX]clickCount not computed correctly on Win32 (never > 2) → clickCount not computed correctly on Win32 (never > 2)
Keywords: verifyme
Verifying should be easy at a user level: triple-click on a line, and see if a line (or, at least, something more than a word, since there are bugs with line selection) gets selected.
Yup. That's why I marked it with a 'verifyme' keyword, since it was clearly documented enough for net.community people to give it a shot. see ya.
verified with 071108 mozilla build on NT 4 Tripple click correctly selects the line. This also works in forms (bug 37373)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.