now calculates 1, 2 & 3 click counts correctly. b=15095